ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /core
            pathType: Prefix
            backend:
              service:
                name: edart-core-service
                port:
                  number: 8090
          - path: /edg
            pathType: Prefix
            backend:
              service:
                name: edartdg-service
                port:
                  number: 3030
